[package]
name = "drogue-nom-utils"
version = "0.1.1"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Bits and bobs common to many nom parsers"
repository = "https://github.com/drogue-iot/drogue-nom-utils"
keywords = [ "nom", "parsing", "no_std" ]
categories = ["no-std"]

[dependencies.nom]
version= "5.1.2"
default-features = false



